<resources>
    <string name="app_name">Emas</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="txt_login">Iniciar</string>
    <string name="txt_help">¿No tiene cuenta?,</string>
    <string name="txt_link">Crear Cuenta</string>
    <string name="email">Correo Electronico</string>
    <string name="name">Nombre</string>
    <string name="user">Usuario</string>
    <string name="passwordConfirm">Confirmar Contraseña</string>
    <string name="txt_accept">Aceptar</string>
    <string name="txt_title_toolbar">Crear Cuenta</string>
    <string name="id_txt_username_cad">Andres Felipe</string>
    <string name="str_tab_search">Buscar</string>
    <string name="str_tab_home">Inicio</string>
    <string name="str_tab_profile">Perfil</string>

    <string name="text_nameUser">Usuario</string>
    <string name="text_password">Contraseña</string>
    <string name="text_btnEnter">Ingresar</string>
    <string name="text_noAccount">¿No tienes una cuenta?</string>
    <string name="text_newAccount">Crea una aquí</string>
    <string name="str_ca_email">Email</string>
    <string name="str_ca_name">Nombre</string>
    <string name="str_ca_user">Usuario</string>
    <string name="str_ca_pass">Contraseña</string>
    <string name="str_ca_confpass">Repetir contraseña</string>
    <string name="str_btn_createaccount">Registrar</string>
    <string name="str_title_toolbar">Crear cuenta</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_title_toolbar_Container">Transporte SIT</string>
    <string name="str_btn_profile_route">Rutas</string>
    <string name="str_btn_profile_picks">Fotos</string>
    <string name="txt_title_toolbar_profile">Perfil</string>
    <string name="str_profile_name">Ivonne</string>
    <string name="str_profile_lastName">Barco</string>
    <string name="str_profile_address">Crr 2 # 26 -14</string>
    <string name="str_profile_txt_address">Direccion</string>
    <string name="txt_field_vaccant">Espacios Vacíos</string>
    <string name="txt_validation_login">Bienvenido</string>
    <string name="txt_no_validation_login">Usuario y Contraseña Erroneos</string>
    <string name="txt_password_validation">Password diferente</string>
    <string name="txt_succesfully_account">Cuenta Creada Exitosamente</string>
    <string name="txt_sign_off">Cerrando Sesión</string>
    <string name="btn_fragment_profile_sign_off">Cerrar Sesión</string>
    <string name="txt_title_toolbar_search">Busca tu Ruta</string>
    <string name="name_user">NOMBRE DE USUARIO</string>
    <string name="info_profile2">PROFESIÓN U OFICIO: Estudiante de Ing. de Sistemas en la IU Cesmag</string>
    <string name="str_profile_data">Informacion Personal</string>
    <string name="info_profile_born">FECHA DE NACIMIENTO: Marzo 25 de 1997</string>
    <string name="info_profile_Route">RUTA DE PREFERENCIA: C15</string>
    <string name="info_city">CIUDAD DE ORIGEN: San Juan de Pasto</string>
    <string name="info_profile_photo">Fotos</string>
    <string name="Ventana_search">Buscar</string>
    <string name="Info_Search">RECOLECCIÓN DE BASURA</string>
    <string name="txt_home_info">Usuarios del sistemas SIT</string>
    <string name="info_profile_email">*****</string>
    <string name="str_fragment_profile_email">Correo:</string>
    <string name="str_itm_route">RUTA</string>
    <string name="str_itm_neighborhood">Barrio</string>
    <string name="str_itm_route_bus">C?</string>
    <string name="str_itm_neighborhood_bus">\???????????</string>
    <string name="txt_search_bus">No se encontro niguna ruta con: </string>
    <string name="item_favorites_menu_desmarcar"> Quitar Favorito </string>
    <string name="item_favorites_menu_more_information"> Más Información</string>
    <string name="str_itm_favorite_route">RUTA</string>
    <string name="str_itm_favorite_route_car">****** </string>
    <string name="str_itm_favorite_neighborhood">BARRIO </string>
    <string name="str_itm_favorite_neighborhood_car">**********</string>
    <string name="txt_title_toolbar_Container_home">Rutas Favoritas </string>
    <string name="txt_field_favorites">No hay Favoritos</string>
    <string name="txt_descart_favorite">Se ha Descartado como Favorito la ruta: </string>
    <string name="txt_neighborhood_routes"> Barrios de la Ruta: </string>
    <string name="txt_route_search">Ruta: </string>
    <string name="txt_neighborhood_routes_search"> - Barrio:</string>
    <string name="txt_check_true">Se ha marcado como favorito </string>
    <string name="txt_check_false">Ha dejado de ser Favorito </string>
    <string name="id_txt_local">CAMBIAR TEXTO</string>
    <string name="useremail">CAMBIAR TEXTO</string>
    <string name="str_menu_change_name">CAMBIAR TEXT</string>
    <string name="str_menu_update">CAMBIAR TEXT</string>
    <string name="str_menu_exit">CAMBIAR TEXT</string>
    <string name="str_title_toolbar_profile">TOOLBAR PROFILE</string>



</resources>
