<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.i015213.emas.Views.Fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <include layout="@layout/actionbar_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="0.2">

            <ImageView
                android:id="@+id/id_avatar_user"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/icons8_circled_female_user_filled_100" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0.2">

            <LinearLayout
                android:id="@+id/id_txt_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/id_txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/blue"
                    android:text="@string/str_ca_name"/>

                <TextView
                    android:id="@+id/id_txt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/blue"
                    android:text="@string/str_ca_user"/>

                <TextView
                    android:id="@+id/id_txt_useremail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/blue"
                    android:text="@string/str_ca_email"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/id_txt_data"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/id_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/name_user"/>

                <TextView
                    android:id="@+id/id_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/username"/>

                <TextView
                    android:id="@+id/id_useremail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/info_profile_email"/>

            </LinearLayout>

        </RelativeLayout>
        <Button
            android:id="@+id/id_btn_fragment_profile_SignOut"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btn_fragment_profile_sign_off"
            android:theme="@style/StyleButton"/>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
