<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.i015213.emas.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6">

            <ImageView
                android:id="@+id/id_logo"
                android:layout_width="156dp"
                android:layout_height="125dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:layout_weight="0.40">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/StyleTextInputBlue">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textInput_userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_nameUser"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/StyleTextInputBlue">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textInput_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_password"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/id_btn_enter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_btnEnter"
                    android:layout_marginTop="30dp"
                    android:theme="@style/StyleButton"
                    android:onClick="goCreateContainer"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/text_no_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_noAccount"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:layout_margin="3dp"/>

                    <TextView
                        android:id="@+id/text_new_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_newAccount"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:layout_margin="3dp"
                        android:layout_toEndOf="@id/text_no_account"
                        android:onClick="goCreateAccount"/>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
